# gpt

./: .dockerignore  .env.example  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  __init__.py  pyproject.toml
src/: main.py
src/exceptions/: gpt.py
src/gpt/: answer_validator.py  base_yandex_gpt.py  prompt_validator.py  yandex_gpt.py
src/models/: __init__.py
src/mytypes/: abc.py  gpt.py
src/rag/: __init__.py  rag.py
src/types/: abc.py
